fucking alpha-beta tree!

--- a/test.ipynb
+++ b/test.ipynb
@@ -418,6 +418,36 @@
     "kernel = [1,0,1,1,1]\n",
     "search2(raw, kernel)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LA'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "\n",
+    "path = \"gobang/assets/img/black.png\"\n",
+    "img = Image.open(path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
